# Live-MR-Manager

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  Roformer_Integration_Plan.md  ToDo.md  UserManual.md  check_final_utf8.txt  errors_utf8.txt  implementation_plan.md  old_main.js  package-lock.json  package.json  refactoring_plan.md  temp_main.js  temp_old_index.html  temp_style.css
.github/workflows/: release.yml
src/: index.html  main.js  overlay-info.html  overlay-lyrics.html  overlay.html  style.css
src-tauri/: .gitignore  Cargo.toml  LiveMR_Library.csv  build_errors.txt  download_korean_large.py  download_multi_large.py  errors.json  errors.txt  setup_engine_a.py  setup_engine_b.py  setup_tokens_b.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: placeholder.txt
src-tauri/scratch/: check_onnx_io.rs  inspect_new_model.rs  inspect_onnx.rs
src-tauri/src/: alignment.rs  audio.rs  audio_commands.rs  audio_player.rs  diagnostics.rs  key_bpm.rs  lib.rs  library.rs  metadata_fetcher.rs  model_commands.rs  model_manager.rs  onnx_engine.rs  onnx_runtime_bootstrap.rs  overlay_server.rs  rescue.rs  seed_tags.json  spreadsheet.rs  state.rs  system.rs  types.rs  vocal_remover.rs  whisper.rs  youtube.rs
src-tauri/src/separation/: mod.rs  task.rs
src/js/: alignment-viewer.js  audio.js  events.js  lyric-drawer.js  lyrics.js  player.js  state.js  tauri-bridge.js  ui.js  utils.js
src/styles/: alignment.css  base.css  components.css  layout.css  library-button.css  library-common.css  library-controls.css  (+9 more)
(+14 files in other folders)
