[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
signalsmith-stretch = "0.1.3"
symphonia = { version = "0.5.5", features = ["all"] }
once_cell = "1.21.4"
parking_lot = "0.12.5"
cpal = "0.17.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
structopt = "0.3.26"
ort = { version = "2.0.0-rc.9", features = ["copy-dylibs", "cuda", "directml", "ndarray"] }
ndarray = "0.17"
rubato = "0.16.0"
rustfft = "6.2.0"
hound = "3.5.1"


